# QuASAr

./: .gitignore  .gitmodules  AGENTS.md  CALIBRATION.md  CLEANUP_CHECKLIST.md  CMakeLists.txt  LICENSE  Paper_TODOs.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  analyse_database.py  backends.py  benchmark_circuit_suite.py  benchmark_cli.py  circuits.py  estimate_paper_figures.py  extensive_circuits.py  large_circuit_descriptions.md  large_scale_circuits.py  oracle_plan_benchmark.py  paper_figures.py  paper_tables.py  parallel_circuits.py  partition_circuits.py  partitioning_workloads.py  plot_utils.py  plots_stitched.py  progress.py  quick_analysis_benchmark.py  quick_analysis_results.csv  run_benchmark.py  run_benchmark_test.py  run_benchmarks.py  runner.py  showcase_benchmarks.py  theoretical_estimation_runner.py  threading_utils.py  verbose_selection_demo.py  visualise_ssd.py
calibration/: .gitignore  coeff_v1.json  cost_model_calibration.ipynb  cost_model_sweeps.py
configs/: benchmark_config.stitched-2x.json  benchmark_config.stitched-disjoint.json  benchmark_config.stitched-workqft.json
docs/: STN_PROTOTYPE.md  __init__.py  analyzer.md  backend_selection.md  classical_controls.md  conversion_primitives.md  cost_estimator_playground.ipynb  cost_estimator_playground.md  cost_model.md  hhl.md  legacy_components.md  mcx_decomposition.md  partitioning_theory.ipynb  partitioning_theory.md  partitioning_thresholds.ipynb  partitioning_tradeoffs.ipynb  quasar_api_simulation_validation.ipynb  simulation_engine_api.md  small_circuit_heuristic.md  sparsity.md  ssd_visualisation.md  stim_to_dd_conversion.md  symmetry.md  test_suite_usage.md  visualise_ssd_workflow.md
issues/: cost_model_coefficients.md  quick_path_memory_usage.md  quick_path_thresholds.md
legacy_code/: QuantumGatePath.py
quasar/: __init__.py  analyzer.py  calibration.py  circuit.py  config.py  cost.py  decompositions.py  method_selector.py  metrics.py  partitioner.py  planner.py  requirements.txt  scheduler.py  simulation_engine.py  sparsity.py  ssd.py  symmetry.py
quasar_convert/: CMakeLists.txt  __init__.py  binding.cpp  conversion_engine.cpp  conversion_engine.hpp
quasar_convert/tests/: test_cache.py  test_engine.py  test_mps_to_statevector.py  test_primitives.py  test_stim_mqt.py
test_suite/: __init__.py  baselines.py  cutoff_suite.py  hybrid_random_tail.py  plots_baselines.py  plots_cutoff.py  theoretical_baselines.py
tests/: README.md  test_amplitude_estimation_circuit.py  test_analyzer.py  test_backend_benchmark_hooks.py  test_backend_ingest.py  test_backend_overheads.py  test_backend_roundtrip.py  test_backend_selection.py  test_backend_selection_logging.py  test_backend_selection_timing.py  test_backend_selection_verbose.py  test_backend_switches.py  test_backend_switches_conversion_time.py  test_backend_symmetry_sparsity.py  test_backends.py  test_benchmark_circuits.py  test_benchmark_cli.py  test_benchmark_prepare_time.py  test_benchmark_quick_path_prebuild.py  test_benchmark_run_failure.py  test_benchmark_run_multiple.py  test_benchmark_run_suite.py  test_benchmark_runner.py  test_benchmark_runner_memory.py  test_benchmark_state_return.py  test_benchmark_total_time.py  test_calibration_loading.py  test_ccx_decomposition.py  test_ccz_decomposition.py  test_circuit.py  test_circuit_ingest.py  test_circuit_serialization.py  test_classical_controls.py  test_cost.py  (+89 more)
(+155 files in other folders)
